--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nestjs-zod": "^4.3.1",
     "nodemailer": "^6.10.0",
+    "openai": "^4.100.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
