--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "bson": "^6.10.3",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
+    "crypto": "^1.0.1",
+    "dayjs": "^1.11.13",
     "ember-template-lint-plugin-prettier": "^5.0.0",
     "express-session": "^1.18.1",
     "handlebars": "^4.7.8",
