--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "postinstall": "prisma generate",
-    "seed": "ts-node prisma/seed.ts"
+    "seed:major-faculty": "ts-node prisma/major-faculty-seeder.ts",
+    "seed:job": "ts-node prisma/job-seeder.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
